added check user auth
